# napari-cpp

./: CMakeLists.txt
src/: main.cpp
src/core/: camera2d.cpp  camera2d.h  dims_model.cpp  dims_model.h  image_layer.cpp  image_layer.h  labels_layer.cpp  labels_layer.h  layer.cpp  layer.h  nd_image.cpp  nd_image.h  slice_extractor.cpp  slice_extractor.h  viewer_model.cpp  viewer_model.h
src/io/: image_reader.cpp  image_reader.h
src/render/: canvas_widget.cpp  canvas_widget.h
src/ui/: dims_widget.cpp  dims_widget.h  layer_controls_widget.cpp  layer_controls_widget.h  layer_list_model.cpp  layer_list_model.h  main_window.cpp  main_window.h
tests/: test_main.cpp  test_suite.cpp
